fix power icon spacing and size

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -336,6 +336,7 @@ label:focus {
 #custom-power {
     background-color: #ed8796;
     color: #24273a;
+    font-size: 18px;
 }
 
 menu {
